--- a/src/IdentityService/IdentityService.csproj
+++ b/src/IdentityService/IdentityService.csproj
@@ -1,20 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.2"/>
+        <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.5" />
 
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.0"/>
+
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
         <PackageReference Include="Serilog.AspNetCore" Version="6.0.0"/>
 
-        <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.12" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.12" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.12" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.12">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="src\GatewayService\appsettings.Development.json" />
+      <_ContentIncludedByDefault Remove="src\GatewayService\appsettings.json" />
+      <_ContentIncludedByDefault Remove="src\GatewayService\obj\GatewayService.csproj.nuget.dgspec.json" />
+      <_ContentIncludedByDefault Remove="src\GatewayService\obj\project.assets.json" />
+      <_ContentIncludedByDefault Remove="src\GatewayService\Properties\launchSettings.json" />
     </ItemGroup>
 </Project>
