--- a/src/IdentityService/Properties/launchSettings.json
+++ b/src/IdentityService/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001"
+      "applicationUrl": "http://127.0.0.1:5000"
     }
   }
 }
