--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -5,13 +5,13 @@
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information",
-        "Microsoft.AspNetCore.Authentication": "Debug",
+        "Microsoft.AspNetCore.Authentication": "Information",
         "System": "Warning"
       }
     }
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=identity"
   }
 }
